[package]
name = "etherlib"
version = "0.1.1"
authors = ["yuyongpeng <yuyongpeng@hotmail.com>"]
edition = "2018"
homepage = "https://github.com/yuyongpeng/ether_lib"
repository = "https://github.com/yuyongpeng/ether_lib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.7.1"
ethkey = "0.3"
eth_checksum = "0.1.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
ethereum-tx-sign = "3.0.3"
ethereum-types = "0.9"
#rustc-hex = "2.1.0"
hex = "0.4.2"
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", branch = "master" }